--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                         </div>
                     </div>
                     <div class="flex-1">
-                        <form class="space-y-4s" id="contact-form" action="https://script.google.com/macros/s/AKfycbzX-bEwQKti8Z80fzBUW53tCsJcTA2At6OGL_w0vtQLdywoXSjOoWArCqHYBKlmjzCCaQ/exec" method="POST">
+                        <form class="space-y-4s" id="contact-form" action="https://formspree.io/f/xqabwbwp" method="POST">
                             <div>
                                 <label for="name" class="block mb-2">Your Name</label>
                             <input type="text" name="from_name" class="w-full p-2 rounded bg-gray-200 dark:bg-gray-800 border border-gray-300 dark:border-gray-600 focus:outline-none focus:border-green-400" placeholder="Enter Your Name" required>
