--- a/index.html
+++ b/index.html
@@ -130,21 +130,25 @@
                         </div>
                     </div>
                     <div class="flex-1">
-                        <form class="space-y-4s" id="contact-form" action="https://formspree.io/f/xqabwbwp" method="POST">
-                            <div>
-                                <label for="name" class="block mb-2">Your Name</label>
-                            <input type="text" name="from_name" class="w-full p-2 rounded bg-gray-200 dark:bg-gray-800 border border-gray-300 dark:border-gray-600 focus:outline-none focus:border-green-400" placeholder="Enter Your Name" required>
-                            </div>
-                            <div>
-                                <label for="email" class="block mb-2">Email</label>
-                                <input type="email" name="from_email" class="w-full p-2 rounded bg-gray-200 dark:bg-gray-800 border border-gray-300 dark:border-gray-600 focus:outline-none focus:border-green-400" placeholder="Enter Your Email" required>
-                            </div>
-                            <div>
-                                <label for="message" class="block mb-2">Message</label>
-                                <textarea name="message" class="w-full p-2 rounded bg-gray-200 dark:bg-gray-800 border border-gray-300 dark:border-gray-600 focus:outline-none focus:border-green-400" rows="3" placeholder="Enter Your Message" required></textarea>
-                            </div>
-                            <button type="submit" class="bg-gradient-to-r from-green-400 to-blue-500 text-white px-8 py-2 rounded-full transform transition-transform duration-300 hover:scale-105">Send</button>
+                        <form
+                              action="https://formspree.io/f/xqabwbwp"
+                              method="POST"
+                        >
+                        <label>
+                        Your Name:
+                            <input type="text" name="name" required>
+                          </label>
+                          <label>
+                        Your Email:
+                            <input type="email" name="email" required>
+                              </label>
+                          <label>
+                        Your Message:
+                        <textarea name="message" required></textarea>
+                          </label>
+                          <button type="submit">Send</button>
                         </form>
+
                     </div>
                 </div>
             </div>
