--- a/index.html
+++ b/index.html
@@ -130,22 +130,20 @@
                         </div>
                     </div>
                     <div class="flex-1">
-                                                   <form id="contact-form" autocomplete="on">
-                              <div class="form-group">
-                                <label for="name">Your Name</label>
-                                <input type="text" id="name" name="name" placeholder="e.g. John Doe" required>
-                              </div>
-                              <div class="form-group">
-                                <label for="email">Your Email</label>
-                                <input type="email" id="email" name="email" placeholder="you@example.com" required>
-                              </div>
-                              <div class="form-group">
-                                <label for="message">Message</label>
-                                <textarea id="message" name="message" placeholder="Type your message here..." rows="4" required></textarea>
-                              </div>
-                              <button type="submit" id="send-btn">Send</button>
+                            <form id="contact-form" action="https://formspree.io/f/xqabwbwp" method="POST">
+                              <label>Your Name:
+                                <input type="text" name="name" required>
+                              </label>
+                              <label>Your Email:
+                                <input type="email" name="email" required>
+                              </label>
+                              <label>Message:
+                                <textarea name="message" required></textarea>
+                              </label>
+                              <button type="submit">Send</button>
                               <div id="form-status"></div>
                             </form>
+
 
 
                     </div>
